--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ input[type=submit] {
   cursor: pointer;
   background-color: #fff; 
   border-bottom: 1px solid #d4d4d4; 
+	text-align: left
 }
 
 /*when hovering an item:*/
@@ -243,14 +244,14 @@ background-color: black;
   
 
 
-
+<center>
   <div class="autocomplete" style="width:75%; padding-left: 5px; max-width: 600px; margin-top:10px;">
     <input id="myInput" type="text" name="query"placeholder="Search">
   </div>
   <input type="submit" value="GO"/>
    
 </form>
-
+	</center>
 </div>
 </div>
 <br>
