--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ background-color: black;
 </header>
 <div>
 
-<form action="https://travissummerlin.tumblr.com" method="get" autocomplete="off" onsubmit="window.location.href=this.action + '' + encodeURIComponent(this.elements['query'].value).replace(/%20/g, '-'); return false;">
+<form action="/" method="get" autocomplete="off" onsubmit="window.location.href=this.action + '' + encodeURIComponent(this.elements['query'].value).replace(/%20/g, '-'); return false;">
   
 
 
